# code-intelligence-suite

./: .gitignore  CONTRIBUTIONS.md  README.md  pyproject.toml
final_report/: 01_manual_reconnaissance.md  02_architecture_diagram_pipeline.md  03_accuracy_analysis.md  04_limitations_failure_modes.md  05_fde_deployment_applicability.md
reports/: 1_reconnaissance.md  2_architecture.md  3_progress_summary.md  4_accuracy_observations.md  5_completion_plan.md
src/: cli.py  config.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: graph_serializers.py  knowledge_graph.py
src/llm/: context_manager.py  llm_client.py  local_ollama.py
src/models/: edges.py  graph_modesl.py  nodes.py
src/utils/: file_utils.py  git_utils.py  logging_utils.py  vector_store_utils.py  visualizer.py
tests/: test_archivist.py  test_graph.py  test_hydrologist.py  test_navigator.py  test_semanticist.py  test_surveyor.py
