[project]
name = "cartographer"
version = "0.1.0"
description = "Codebase Intelligence Suite for FDE Onboarding"
authors = [
    {name = "Dereje Derib",email = "derejederib@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [  
    "pydantic (>=2.12.5,<3.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "typer (>=0.24.1,<0.25.0)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "rope (>=1.14.0,<2.0.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "sqlglot (>=29.0.1,<30.0.0)", 
    "pandas (>=2.2,<3.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "gitpython (>=3.1.46,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tree-sitter-sql (>=0.3.11,<0.4.0)",
    "tree-sitter-yaml (>=0.7.2,<0.8.0)",
    "langgraph (>=1.1.2,<2.0.0)",
    "langchain (>=1.2.12,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false


[dependency-groups]
dev = [
    "black (>=26.3.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
